--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@types/react": "19.1.8"
+    "@types/node": "^24.1.0",
+    "@types/react": "19.1.8",
+    "typescript": "^5.8.3"
   }
 }
